@@ -40,7 +40,6 @@ import java.time.temporal.TemporalUnit;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -298,7 +297,7 @@ public abstract class BaseOptions {
 
     /**
      * Value for command-line option {@code --override-methods summary}
-     * or  {@code --override-methods detail}.
+     * or {@code --override-methods detail}.
      * Specifies whether those methods that override a super-type's method
      * with no changes to the API contract should be summarized in the
      * footnote section.
@@ -1028,7 +1027,7 @@ public abstract class BaseOptions {
      * Arguments for command line option {@code --since}.
      */
     public List<String> since() {
-        return Collections.unmodifiableList(since);
+        return List.copyOf(since);
     }
 
     /**
@@ -1048,7 +1047,7 @@ public abstract class BaseOptions {
 
     /**
      * Value for command-line option {@code --override-methods summary}
-     * or  {@code --override-methods detail}.
+     * or {@code --override-methods detail}.
      * Specifies whether those methods that override a super-type's method
      * with no changes to the API contract should be summarized in the
      * footnote section.
